--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <section class="about" id="about">
       <div class="container">
         <div class="profile-img " data-aos="fade-right" data-aos-delay="300">
-          <img src="images/profile-image.jpg" alt="pic">
+          <img src="profile-image.jpg" alt="pic">
 
         </div>
         <div class="about-details" data-aos="fade-left" data-aos-delay="600">
@@ -161,7 +161,7 @@
         </div>
         <div class="portfolio-item">
           <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="100">
-            <img src="images/portitem1.jpeg" alt="">
+            <img src="portitem1.jpeg" alt="">
 
           </div>
           <div class="portfolio-description" data-aos="fade-left" data-aos-delay="200">
@@ -185,13 +185,13 @@
                <a href="#" class="cta">View Details</a>
             </div>
             <div class="portfolio-img has-margin-right" data-aos="fade-left" data-aos-delay="400">
-              <img src="images/portitem2.jpeg" alt="">
+              <img src="portitem2.jpeg" alt="">
 
             </div>
           </div>
             <div class="portfolio-item">
               <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="500">
-                <img src="images/portitem3.jpeg" alt="">
+                <img src="portitem3.jpeg" alt="">
 
               </div>
               <div class="portfolio-description" data-aos="fade-left" data-aos-delay="600">
