--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <section class="about" id="about">
       <div class="container">
         <div class="profile-img " data-aos="fade-right" data-aos-delay="300">
-          <img src="images/profile-image.jpg" alt="pic">
+          <img src="https://user-images.githubusercontent.com/67047397/86449403-c7218300-bd35-11ea-9bfd-605e6f8ee5c8.jpg" alt="pic">
 
         </div>
         <div class="about-details" data-aos="fade-left" data-aos-delay="600">
